# bpf-chat

./: .gitignore  CMakeLists.txt  Makefile  README.md
bpfc/: CMakeLists.txt
bpfc/core/: CMakeLists.txt  networking.c
bpfc/include/: bpfc.h  networking.h
bpfc/src/: CMakeLists.txt  bpfc.c  main.c
bpff/: CMakeLists.txt
bpff/include/: bpff.h
bpff/src/: CMakeLists.txt  bpff.c  main.c
client/: __main__.py  client.py  networking.py  parse.py  view.py
peer/: __main__.py  parse.py  peer.py  view.py
redirector/: CMakeLists.txt
redirector/core/: CMakeLists.txt  checksum.c  networking.c  rawparser.c
redirector/include/: checksum.h  networking.h  rawparser.h  redirector.h
redirector/src/: CMakeLists.txt  main.c  redirector.c
